Things work but kill my RAM

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -1,17 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Assignment_2.ipynb",
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -129,6 +116,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,6 +124,7 @@
         "id": "BspxZcRjW0NG",
         "outputId": "23dd2947-797f-4d0a-e307-7666d1e2e7ae"
       },
+      "outputs": [],
       "source": [
         "import os\n",
         "import requests\n",
@@ -159,6 +148,7 @@
         "\n",
         "    if not os.path.exists(toy_data_path):\n",
         "        print(\"Downloading FEVER data splits...\")\n",
+        "        \n",
         "        with requests.Session() as current_session:\n",
         "            response = current_session.get(toy_url,\n",
         "                                   params={'id': toy_data_url_id},\n",
@@ -172,19 +162,192 @@
         "        print(\"Extraction completed!\")\n",
         "\n",
         "download_data('dataset')"
-      ],
-      "execution_count": null,
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%load_ext autoreload\n",
+        "%autoreload 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
       "outputs": [
         {
+          "data": {
+            "text/plain": [
+              "'Hemsworth has also appeared in the science fiction action film Star Trek -LRB- 2009 -RRB- , the thriller adventure A Perfect Getaway -LRB- 2009 -RRB- , the horror comedy The Cabin in the Woods -LRB- 2012 -RRB- , the dark-fantasy action film Snow White and the Huntsman -LRB- 2012 -RRB- , the war film Red Dawn -LRB- 2012 -RRB- , and the biographical sports drama film Rush -LRB- 2013 -RRB- .'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "data = pd.read_csv('dataset/train_pairs.csv', index_col=0)\n",
+        "data[\"Evidence\"] = data[\"Evidence\"].apply(lambda x: x.split(\"\\t\")[1])\n",
+        "data[\"Evidence\"][0]\n",
+        "# Note that LRB is Left Round Brace (parenthesis)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "MAX_SENTENCE_LEN = 500\n",
+        "EMBEDDING_DIM = 100"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Downloading FEVER data splits...\n",
-            "Download completed!\n",
-            "Extracting dataset...\n",
-            "Extraction completed!\n"
-          ],
-          "name": "stdout"
+            "Generated embeddings for 681 OOV words.\n"
+          ]
         }
+      ],
+      "source": [
+        "from text_vectorizer import TextVectorizer, encode_target\n",
+        "\n",
+        "data = pd.read_csv('dataset/train_pairs.csv', index_col=0)\n",
+        "tv = TextVectorizer(max_size=MAX_SENTENCE_LEN, embedding_dim=EMBEDDING_DIM)\n",
+        "tv.adapt(data, [\"Claim\", \"Evidence\"])\n",
+        "data = tv.transform(data, [\"Claim\", \"Evidence\"])\n",
+        "data[\"Label\"] = encode_target(data[\"Label\"])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[-0.32218999,  0.64631999,  0.027312  , ..., -0.18124001,\n",
+              "         0.50172001, -0.74621999],\n",
+              "       [-0.32218999,  0.64631999,  0.027312  , ..., -0.18124001,\n",
+              "         0.50172001, -0.74621999],\n",
+              "       [ 0.04335442,  0.78058362,  0.70903143, ..., -0.71454855,\n",
+              "         0.51871644, -0.21582497],\n",
+              "       ...,\n",
+              "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
+              "         0.        ,  0.        ]])"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data.iloc[-1,1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(100, 500, 100)"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "X_train_claim = np.stack(data[\"Claim\"])\n",
+        "X_train_evidence = np.stack(data[\"Evidence\"])\n",
+        "y_train = data[\"Label\"]\n",
+        "X_train_claim.shape, X_train_evidence.shape,y_train"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_7\"\n",
+            "__________________________________________________________________________________________________\n",
+            " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            " claim (InputLayer)             [(None, 500, 100)]   0           []                               \n",
+            "                                                                                                  \n",
+            " evidence (InputLayer)          [(None, 500, 100)]   0           []                               \n",
+            "                                                                                                  \n",
+            " lstm_14 (LSTM)                 (None, 100)          80400       ['claim[0][0]']                  \n",
+            "                                                                                                  \n",
+            " lstm_15 (LSTM)                 (None, 100)          80400       ['evidence[0][0]']               \n",
+            "                                                                                                  \n",
+            " concatenate_7 (Concatenate)    (None, 200)          0           ['lstm_14[0][0]',                \n",
+            "                                                                  'lstm_15[0][0]']                \n",
+            "                                                                                                  \n",
+            " dense_14 (Dense)               (None, 128)          25728       ['concatenate_7[0][0]']          \n",
+            "                                                                                                  \n",
+            " dense_15 (Dense)               (None, 1)            129         ['dense_14[0][0]']               \n",
+            "                                                                                                  \n",
+            "==================================================================================================\n",
+            "Total params: 186,657\n",
+            "Trainable params: 186,657\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "def build_model_1():\n",
+        "    claim_input = tf.keras.layers.Input(shape=(MAX_SENTENCE_LEN, EMBEDDING_DIM), name=\"claim\")\n",
+        "    evidence_input = tf.keras.layers.Input(shape=(MAX_SENTENCE_LEN, EMBEDDING_DIM), name=\"evidence\")\n",
+        "    claim_lstm = tf.keras.layers.LSTM(units=EMBEDDING_DIM)(claim_input)\n",
+        "    evidence_lstm = tf.keras.layers.LSTM(units=EMBEDDING_DIM)(evidence_input)\n",
+        "    concatenated = tf.keras.layers.concatenate([claim_lstm, evidence_lstm])\n",
+        "    dense = tf.keras.layers.Dense(units=128)(concatenated)\n",
+        "    dense = tf.keras.layers.Dense(units=1, activation=\"sigmoid\")(dense)\n",
+        "    model = tf.keras.Model(inputs=[claim_input, evidence_input], outputs=dense)\n",
+        "    model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+        "    return model\n",
+        "\n",
+        "model = build_model_1()\n",
+        "model.summary()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "![Model 1](model_1.png)"
       ]
     },
     {
@@ -588,5 +751,30 @@
         "---"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Assignment_2.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
