Correct model building

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,9 +166,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -176,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -186,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -213,7 +222,7 @@
         "    return stemmed\n",
         "\n",
         "def process_dataset(dataset_path, max_sentence_length=MAX_SENTENCE_LEN, embedding_dim=EMBEDDING_DIM, vectorizer=None):\n",
-        "    data = pd.read_csv(dataset_path)\n",
+        "    data = pd.read_csv(dataset_path).iloc[:100]\n",
         "    nl_columns = [\"Evidence\", \"Claim\"]\n",
         "    for column in nl_columns:\n",
         "        data[column] = data[column].apply(clean_and_split)\n",
@@ -227,21 +236,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Generated embeddings for 8595 OOV words.\n"
+            "Generated embeddings for 187 OOV words.\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "121740it [00:14, 8273.21it/s]\n"
+            "100it [00:00, 2713.78it/s]\n"
           ]
         }
       ],
@@ -253,34 +262,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(1000, 250)"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "X_train_claim.shape"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Model: \"model_3\"\n",
+            "Model: \"model_4\"\n",
             "__________________________________________________________________________________________________\n",
             " Layer (type)                   Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
@@ -288,25 +277,29 @@
             "                                                                                                  \n",
             " evidence (InputLayer)          [(None, 250)]        0           []                               \n",
             "                                                                                                  \n",
-            " claim_embedding (Embedding)    (None, 250, 100)     40859600    ['claim[0][0]']                  \n",
+            " claim_masking (Masking)        (None, 250)          0           ['claim[0][0]']                  \n",
             "                                                                                                  \n",
-            " evidence_embedding (Embedding)  (None, 250, 100)    40859600    ['evidence[0][0]']               \n",
+            " evidence_masking (Masking)     (None, 250)          0           ['evidence[0][0]']               \n",
+            "                                                                                                  \n",
+            " claim_embedding (Embedding)    (None, 250, 100)     40018800    ['claim_masking[0][0]']          \n",
+            "                                                                                                  \n",
+            " evidence_embedding (Embedding)  (None, 250, 100)    40018800    ['evidence_masking[0][0]']       \n",
             "                                                                                                  \n",
             " claim_lstm (LSTM)              (None, 100)          80400       ['claim_embedding[0][0]']        \n",
             "                                                                                                  \n",
             " evidence_lstm (LSTM)           (None, 100)          80400       ['evidence_embedding[0][0]']     \n",
             "                                                                                                  \n",
-            " concatenate_3 (Concatenate)    (None, 200)          0           ['claim_lstm[0][0]',             \n",
+            " concatenate_4 (Concatenate)    (None, 200)          0           ['claim_lstm[0][0]',             \n",
             "                                                                  'evidence_lstm[0][0]']          \n",
             "                                                                                                  \n",
-            " dense_6 (Dense)                (None, 128)          25728       ['concatenate_3[0][0]']          \n",
+            " dense_8 (Dense)                (None, 128)          25728       ['concatenate_4[0][0]']          \n",
             "                                                                                                  \n",
-            " dense_7 (Dense)                (None, 1)            129         ['dense_6[0][0]']                \n",
+            " dense_9 (Dense)                (None, 1)            129         ['dense_8[0][0]']                \n",
             "                                                                                                  \n",
             "==================================================================================================\n",
-            "Total params: 81,905,857\n",
+            "Total params: 80,224,257\n",
             "Trainable params: 186,657\n",
-            "Non-trainable params: 81,719,200\n",
+            "Non-trainable params: 80,037,600\n",
             "__________________________________________________________________________________________________\n"
           ]
         }
@@ -314,15 +307,23 @@
       "source": [
         "import tensorflow as tf\n",
         "\n",
-        "def build_model_1(embedding_matrix):\n",
+        "def build_model_1(embedding_matrix, merging_mode=\"concat\"):\n",
+        "    assert merging_mode in [\"concat\", \"add\", \"mean\"]\n",
         "    claim_input = tf.keras.layers.Input(shape=(MAX_SENTENCE_LEN), name=\"claim\")\n",
+        "    claim_masking = tf.keras.layers.Masking(mask_value=0, name=\"claim_masking\")(claim_input)\n",
         "    evidence_input = tf.keras.layers.Input(shape=(MAX_SENTENCE_LEN), name=\"evidence\")\n",
-        "    claim_embedding = tf.keras.layers.Embedding(embedding_matrix.shape[0], embedding_matrix.shape[1], weights=[embedding_matrix], trainable=False, name=\"claim_embedding\")(claim_input)\n",
-        "    evidence_embedding = tf.keras.layers.Embedding(embedding_matrix.shape[0], embedding_matrix.shape[1], weights=[embedding_matrix], trainable=False, name=\"evidence_embedding\")(evidence_input)\n",
+        "    evidence_masking = tf.keras.layers.Masking(mask_value=0, name=\"evidence_masking\")(evidence_input)\n",
+        "    claim_embedding = tf.keras.layers.Embedding(embedding_matrix.shape[0], embedding_matrix.shape[1], weights=[embedding_matrix], trainable=False, name=\"claim_embedding\")(claim_masking)\n",
+        "    evidence_embedding = tf.keras.layers.Embedding(embedding_matrix.shape[0], embedding_matrix.shape[1], weights=[embedding_matrix], trainable=False, name=\"evidence_embedding\")(evidence_masking)\n",
         "    claim_lstm = tf.keras.layers.LSTM(units=EMBEDDING_DIM, name=\"claim_lstm\")(claim_embedding)\n",
         "    evidence_lstm = tf.keras.layers.LSTM(units=EMBEDDING_DIM, name=\"evidence_lstm\")(evidence_embedding)\n",
-        "    concatenated = tf.keras.layers.concatenate([claim_lstm, evidence_lstm])\n",
-        "    dense = tf.keras.layers.Dense(units=128)(concatenated)\n",
+        "    if merging_mode == \"concat\":\n",
+        "        merged = tf.keras.layers.concatenate([claim_lstm, evidence_lstm])\n",
+        "    elif merging_mode == \"add\":\n",
+        "        merged = tf.keras.layers.add([claim_lstm, evidence_lstm])\n",
+        "    elif merging_mode == \"mean\":\n",
+        "        merged = tf.keras.layers.average([claim_lstm, evidence_lstm])\n",
+        "    dense = tf.keras.layers.Dense(units=128)(merged)\n",
         "    dense = tf.keras.layers.Dense(units=1, activation=\"sigmoid\")(dense)\n",
         "    model = tf.keras.Model(inputs=[claim_input, evidence_input], outputs=dense)\n",
         "    model.compile(optimizer=\"adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
@@ -555,6 +556,18 @@
         "\n",
         "*     **Mean**: `[batch_size, embedding_dim + 1]`\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# id_claim: [id_ev1, id_ev]\n",
+        "\n",
+        "# X_test_evidence[id_ev1]\n",
+        "# X_test_evidence[id_ev2]"
       ]
     },
     {
