--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -616,55 +616,26 @@
    "metadata": {
     "id": "Nd74ULgpnJrc"
    },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "# Performance evaluation\n",
-    "\n",
-    "Due to our simplifications, obtained results are not directly compatible with a traditional fact checking method that considers the evidence set as a whole.\n",
-    "\n",
-    "Thus, we need to consider two types of evaluations.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "A. **Multi-input classification evaluation**\n",
-    "\n",
-    "This type of evaluation is the easiest and concerns computing evaluation metrics, such as accuracy, f1-score, recall and precision, of our pre-processed dataset.\n",
-    "\n",
-    "In other words, we assess the performance of chosen classifiers.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "B. **Claim verification evaluation**\n",
-    "\n",
-    "However, if we want to give an answer concerning the claim itself, we need to consider the whole evidence set. \n",
-    "\n",
-    "Intuitively, for a given claim, we consider all its corresponding (claim, evidence) pairs and their corresponding classification outputs. \n",
-    "\n",
-    "At this point, all we need to do is to compute the final predicted claim label via majority voting.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "Example:\n",
-    "\n",
-    "    Claim: c1\n",
-    "    Evidence set: e1, e2, e3\n",
-    "    True label: S\n",
-    "\n",
-    "    Pair outputs:\n",
-    "    (c1, e1) -> S (supports)\n",
-    "    (c1, e2) -> S (supports)\n",
-    "    (c1, e3) -> R (refutes)\n",
-    "\n",
-    "    Majority voting:\n",
-    "    S -> 2 votes\n",
-    "    R -> 1 vote\n",
-    "\n",
-    "    Final label:\n",
-    "    c1 -> S\n",
-    "\n",
-    "Lastly, we have to compute classification metrics just like before.\n",
-    "\n",
-    "Shortly speaking, implement both strategies for your classification metrics."
-   ]
+    "def evaluate_model(model, X_test, y_test):\n",
+    "  \"\"\"\n",
+    "  show classification report using model to predict output on X_test\n",
+    "  \"\"\"\n",
+    "  y_pred = model.predict(X_test)\n",
+    "  print(classification_report(y_test, y_pred, labels=[0,1], target_names=['REFUTED', 'SUPPORTED']))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
