Fixed superbug in cosine similarity

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -338,7 +338,7 @@
     "    elif merging_mode == \"mean\":\n",
     "        merged = tf.keras.layers.average([claim_encoding, evidence_encoding])\n",
     "    if cosine_similarity:\n",
-    "        cos_similarity = tf.keras.layers.Dot(axes=1, name=\"cos_similarity\")([claim_encoding, evidence_encoding])\n",
+    "        cos_similarity = tf.keras.layers.Dot(axes=1, name=\"cos_similarity\", normalize=True)([claim_encoding, evidence_encoding])\n",
     "        merged = tf.keras.layers.concatenate([merged, cos_similarity])\n",
     "    dense = tf.keras.layers.Dense(units=128)(merged)\n",
     "    dense = tf.keras.layers.Dense(units=1, activation=\"sigmoid\")(dense)\n",
